--- a/style.css
+++ b/style.css
@@ -2,3 +2,52 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    background-color: #f5f4f0;
+}
+
+#container{
+    box-sizing: border-box;
+    width: 1120px;
+    margin: 88px auto 137px;
+}
+
+.headline{
+    color: #e1624f;
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
+h2{
+    font-size: 36px;
+}
+
+img{
+    border-radius: 28px;
+}
+
+#busanMain{
+    height: 660px;
+    margin-top: 44px;
+    margin-bottom: 24px;
+}
+
+#description{
+    font-style: italic;
+    text-align: center;
+}
+
+.divider{
+    width: 100%;
+    height: 1px;
+    margin: 40px 0;
+    background-color: #d9d9d9;
+}
+
+footer{
+    text-align: center;
+    padding-bottom: 48px;
+}
