--- a/style.css
+++ b/style.css
@@ -47,6 +47,19 @@ img{
     background-color: #d9d9d9;
 }
 
+#titleContent{
+    margin-top: 64px;
+    margin-bottom: 64px;
+}
+
+#titleContent p{
+    margin-top: 8px;
+}
+
+#Haedong{
+    margin-bottom: 20px;
+}
+
 footer{
     text-align: center;
     padding-bottom: 48px;
