--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body{
     font-weight: bold;
 }
 
+#forHistoryLovers .headline{
+    margin-bottom: 2px;
+}
+
 h2{
     font-size: 36px;
 }
@@ -56,8 +60,33 @@ img{
     margin-top: 8px;
 }
 
-#Haedong{
+#titleContent h2{
+    font-size: 32px;
+}
+
+#forHistoryLovers img{
     margin-bottom: 20px;
+}
+
+h3{
+    font-size: 28px;
+}
+
+h3 + p{
+    margin-top: 4px;
+}
+
+#Beomeo-sa{
+    margin-top: 48px;
+}
+
+#Yongdusan{
+    margin-top: 48px;
+}
+
+#final p{
+    text-align: center;
+    font-size: 16px;
 }
 
 footer{
