--- a/style.css
+++ b/style.css
@@ -84,6 +84,50 @@ h3 + p{
     margin-top: 48px;
 }
 
+.BomPara{
+    font-weight: bold;
+}
+
+ol li::marker{
+    font-weight: bold;
+    font-size: 28px;
+}
+
+ul{
+    list-style-type: disc;
+    padding-left: 20px;
+    margin-top: 4px;
+}
+
+ul li{
+    font-size: 16px;
+}
+
+ul li::marker{
+    color: #333333;
+    font-size: 12px;
+}
+
+.historia{
+    font-weight: bold;
+    color: #0c51a7;
+}
+
+.casais{
+    font-weight: bold;
+    color: #591b98;
+}
+
+.familias{
+    font-weight: bold;
+    color: #e5245e;
+}
+
+.orcamento{
+    font-weight: bold;
+    color: #e95e10;
+}
+
 #final p{
     text-align: center;
     font-size: 16px;
