--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+:root{
+    font-family: "Open Sans", sans-serif;
+}
+
 body{
     background-color: #f5f4f0;
 }
@@ -25,8 +29,13 @@ body{
     margin-bottom: 2px;
 }
 
+#forHistoryLovers p{
+    color: #333333;
+}
+
 h2{
     font-size: 36px;
+    color: #1b1b1b;
 }
 
 img{
@@ -42,6 +51,7 @@ img{
 #description{
     font-style: italic;
     text-align: center;
+    color: #333333;
 }
 
 .divider{
@@ -58,6 +68,7 @@ img{
 
 #titleContent p{
     margin-top: 8px;
+    color: #333333;
 }
 
 #titleContent h2{
@@ -88,19 +99,30 @@ h3 + p{
     font-weight: bold;
 }
 
+ol li{
+    list-style-position: inside;
+}
+
 ol li::marker{
     font-weight: bold;
     font-size: 28px;
 }
 
+ol li h3{
+    display: inline;
+    margin-left: 5px;
+    vertical-align: top;
+}
+
 ul{
     list-style-type: disc;
-    padding-left: 20px;
     margin-top: 4px;
 }
 
 ul li{
     font-size: 16px;
+    margin-left: 1px;
+    vertical-align: middle;
 }
 
 ul li::marker{
@@ -131,9 +153,14 @@ ul li::marker{
 #final p{
     text-align: center;
     font-size: 16px;
+    color: #333333;
 }
 
 footer{
     text-align: center;
     padding-bottom: 48px;
+}
+
+footer img{
+    vertical-align: middle;
 }
